test/bad/simple-mismatch.sam
// ERROR_COUNT: 1
// simple-mismatch.sam:6:26-6:30: [UnexpectedType]: Expected: `int`, actual: `bool`.

class Main {
  // should be type bool!
  function main(): int = true
}
